# chess

./: CMakeLists.txt  LICENSE.md  README.md  imgui.ini
assets/shaders/: quad.frag  quad.vert
src/: CMakeLists.txt  main.cpp
src/chess/: chess.cpp  chess.hpp  pieces.hpp
src/graphics/gl/: batch_renderer.cpp  batch_renderer.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  vertex.hpp
src/math/: mat.hpp  vec.hpp
src/platform/: io.hpp
src/platform/unix/: io.cpp  io.hpp
src/platform/win32/: io.cpp  io.hpp
